--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header {
 .find-store {
     display: flex;
     align-items: center;
-    margin-right: 30px;
+    margin-right: 1.0rem;
     font-weight: 600;
 }
 
@@ -127,6 +127,25 @@ header {
     border-color:#FBD1C0;
     padding: 10px 20px;
 }
+
+
+@media (max-width: 700px) {
+    .right-nav {
+        display: flex;
+        align-items: center;
+        width:50%;
+        margin: 0;
+        padding: 0;
+    }
+    .logo {
+        margin: auto;
+    }
+
+    .left-nav {
+        display: none; 
+    }
+}
+
 
 
 
